changed overflow bug

--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,5 +1,6 @@
 .projects-section {
   padding: 10rem 0;
+  overflow-x: hidden;
   .featured-text {
     padding: 2rem;
     @media (min-width: 992px) {
