--- a/scss/_skills-section.scss
+++ b/scss/_skills-section.scss
@@ -1,5 +1,6 @@
 .skill-section{
   padding-top: 5rem;
+  overflow-x: hidden;
     p{
         margin-top: 15px;
     }
